--- a/.env
+++ b/.env
@@ -30,3 +30,8 @@ CACHE_DISK_SIZE=1000000m
 
 ## Change this to limit the maximum age of cached content (default 3650d)
 CACHE_MAX_AGE=3650d
+
+## Change this to limit the maximum lifetime of DNS cache entries from your upstream DNS.  Value in seconds.  Default is 7 days.
+MAX_DNSCACHE_TTL=604800
+## Same as above, but for NXDOMAIN (domain doesn't exist) replies specifically.  Value in seconds.  Default is 1 hour.
+MAX_DNSNCACHE_TTL=3600
