--- a/.env
+++ b/.env
@@ -7,17 +7,17 @@ USE_GENERIC_CACHE=true
 ## IP addresses that the lancache monolithic instance is reachable on
 ## Specify one or more IPs, space separated - these will be used when resolving DNS hostnames through lancachenet-dns. Multiple IPs can improve cache priming performance for some services (e.g. Steam)## IP Address that the lancache monolithic instance will run on
 ## Note: This setting only affects DNS, monolithic and sniproxy will still bind to all IPs by default
-LANCACHE_IP=10.0.39.1
+LANCACHE_IP=10.0.0.2
 
 ## IP address on the host that the DNS server should bind to
-DNS_BIND_IP=10.0.39.1
+DNS_BIND_IP=10.0.0.2
 
 ## DNS Resolution for forwarded DNS lookups
-UPSTREAM_DNS=8.8.8.8
+UPSTREAM_DNS=10.0.0.1
 
 ## Storage path for the cached data
 ## Note that by default, this will be a folder relative to the docker-compose.yml file
-CACHE_ROOT=./lancache
+CACHE_ROOT=/hoard/lancache/data
 
 ## Change this to customise the size of the memory cache (default 500m)
 CACHE_MEM_SIZE=500m
@@ -32,6 +32,6 @@ CACHE_DISK_SIZE=1000000m
 CACHE_MAX_AGE=3650d
 
 ## Change this to limit the maximum lifetime of DNS cache entries from your upstream DNS.  Value in seconds.  Default is 7 days.
-MAX_DNSCACHE_TTL=604800
+MAX_DNSCACHE_TTL=300
 ## Same as above, but for NXDOMAIN (domain doesn't exist) replies specifically.  Value in seconds.  Default is 1 hour.
-MAX_DNSNCACHE_TTL=3600
+MAX_DNSNCACHE_TTL=300
