--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   dns:
-    image: lancachenet/lancache-dns:latest
+    image: araemo/lancache-dns:MAX_DNSCACHE_TTL
     env_file: .env
 #    restart: unless-stopped
     ports:
