Add FORWARD_ONLY directive

--- a/.env
+++ b/.env
@@ -31,7 +31,9 @@ CACHE_DISK_SIZE=1000000m
 ## Change this to limit the maximum age of cached content (default 3650d)
 CACHE_MAX_AGE=3650d
 
-## Change this to limit the maximum lifetime of DNS cache entries from your upstream DNS.  Value in seconds.  Default is 7 days.
+## Change this to limit the maximum lifetime of DNS cache entries from your upstream DNS.  Value in seconds.  Default is 7 days.  Minimum is 1 second unless FORWARD_ONLY = true
 MAX_DNSCACHE_TTL=300
 ## Same as above, but for NXDOMAIN (domain doesn't exist) replies specifically.  Value in seconds.  Default is 1 hour.
 MAX_DNSNCACHE_TTL=300
+## Disable resolving addresses on this server, forward only.  Required when MAX_DNSCACHE_TTL = 0
+FORWARD_ONLY=true
