reword FORWARD_ONLY comment

--- a/.env
+++ b/.env
@@ -35,5 +35,5 @@ CACHE_MAX_AGE=3650d
 MAX_DNSCACHE_TTL=300
 ## Same as above, but for NXDOMAIN (domain doesn't exist) replies specifically.  Value in seconds.  Default is 1 hour.
 MAX_DNSNCACHE_TTL=300
-## Disable resolving addresses on this server, forward only.  Required when MAX_DNSCACHE_TTL = 0
+## Disable resolving addresses on this server, forward requests only.  Required when MAX_DNSCACHE_TTL = 0
 FORWARD_ONLY=true
